Добавляет общие стили для кнопок

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,7 @@
 
 
 // <<<---Other--->>>
+@import "./components/button.scss";
 @import "./components/page-header.scss";
 @import "./components/page-nav.scss";
 @import "./components/features.scss";
