Добавляет общие стили для загаловков разделов

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,7 @@
 //  <<<---Универсальные стили--->>>
 @import "./components/button.scss";
 @import "./components/external-link.scss";
+@import "./components/section-title.scss";
 
 //  <<<---Целевые стили--->>>
 @import "./components/page-header.scss";
