--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -25,3 +25,4 @@
 @import "./components/price.scss";
 @import "./components/write-us.scss";
 @import "./components/page-footer.scss";
+@import "./components/social.scss";
