--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,6 +16,7 @@
 @import "./components/section-title.scss";
 
 //  <<<---Целевые стили--->>>
+@import "./components/site-nav.scss";
 @import "./components/page-header.scss";
 @import "./components/page-nav.scss";
 @import "./components/features.scss";
