Добавляет стили для навигации в футоре

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,6 +17,7 @@
 
 //  <<<---Целевые стили--->>>
 @import "./components/site-nav.scss";
+@import "./components/footer-nav.scss";
 @import "./components/page-header.scss";
 @import "./components/page-nav.scss";
 @import "./components/features.scss";
