--- a/src/sass/components/page-footer.scss
+++ b/src/sass/components/page-footer.scss
@@ -1,4 +1,6 @@
 .page-footer {
+  color: #c3c3c3;
+
   background-color: #363636;
 }
 
@@ -14,6 +16,17 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 50px;
+  padding-bottom: 45px;
+
+  border-bottom: 2px solid #5e5e5e;
+
+  &:last-child {
+    margin-bottom: 0;
+    padding-bottom: 0;
+
+    border-bottom: none;
+  }
 }
 
 .page-footer__logo {
