Добавляет стили для полей ввода текста

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,6 +12,7 @@
 
 //  <<<---Универсальные стили--->>>
 @import "./components/button.scss";
+@import "./components/custom-text-box.scss";
 @import "./components/external-link.scss";
 @import "./components/section-title.scss";
 
