Добавляет стили для кастомных чекбоксов

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,7 @@
 //  <<<---Универсальные стили--->>>
 @import "./components/button.scss";
 @import "./components/custom-text-box.scss";
+@import "./components/custom-checkbox.scss";
 @import "./components/external-link.scss";
 @import "./components/section-title.scss";
 
