Добавляет scss переменные для шрифтов

--- a/src/sass/components/features.scss
+++ b/src/sass/components/features.scss
@@ -32,6 +32,6 @@
 
   font-size: 30px;
   line-height: 30px;
-  font-family: "Georgia", sans-serif;
+  font-family: $secondery-font;
   color: #a38b70;
 }
