--- a/src/sass/components/section-title.scss
+++ b/src/sass/components/section-title.scss
@@ -2,6 +2,6 @@
   font-weight: 700;
   font-size: 45px;
   line-height: 55px;
-  font-family: "Georgia", "Arial", sans-serif;
+  font-family: $secondery-font;
   color: #a38b70;
 }
