--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -6,3 +6,8 @@ $desktop-width: 1200px;
 // <<--- Colors --->>
 
 $primary-text-color: #404040;
+
+// <<--- Fonts --->>
+
+$primary-font: "Arial", sans-serif;
+$secondery-font: "Georgia", "Arial", serif;
