--- a/src/sass/components/button.scss
+++ b/src/sass/components/button.scss
@@ -9,7 +9,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
-  font-family: "Arial", sans-serif;
+  font-family: $primary-font;
   text-align: center;
   text-transform: uppercase;
 
