--- a/src/sass/components/social.scss
+++ b/src/sass/components/social.scss
@@ -11,7 +11,7 @@
   font-weight: 700;
   font-size: 24px;
   line-height: normal;
-  font-family: "Georgia", "Arial", sans-serif;
+  font-family: $secondery-font;
   color: #a38b70;
 }
 
