--- a/src/sass/global/global.scss
+++ b/src/sass/global/global.scss
@@ -12,7 +12,7 @@ html {
 body {
   font-size: 16px;
   line-height: 24px;
-  font-family: "Arial", sans-serif;
+  font-family: $primary-font;
   color: $primary-text-color;
 
   background-color: #ffffff;
