--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,7 +16,7 @@
 @import "./components/custom-checkbox.scss";
 @import "./components/external-link.scss";
 @import "./components/section-title.scss";
-
+@import "./components/review-item.scss";
 //  <<<---Целевые стили--->>>
 @import "./components/site-nav.scss";
 @import "./components/footer-nav.scss";
