--- a/src/sass/components/popular-products.scss
+++ b/src/sass/components/popular-products.scss
@@ -11,10 +11,19 @@
 .popular-products__header {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   margin-bottom: 60px;
 }
 
 .popular-products__title {
+  flex: 1 1 auto;
+  margin: 0;
+  margin-right: 170px;
+}
+
+.popular-products__catalog-link {
+  flex-shrink: 0;
+  min-width: 170px;
   margin: 0;
 }
 
@@ -30,6 +39,4 @@
 
 .popular-products__item {
   width: 308px;
-
-  border: 1px solid #d8d8d8;
 }
