--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,6 +17,7 @@
 @import "./components/external-link.scss";
 @import "./components/section-title.scss";
 @import "./components/review-item.scss";
+@import "./components/product.scss";
 //  <<<---Целевые стили--->>>
 @import "./components/site-nav.scss";
 @import "./components/footer-nav.scss";
