Добавляет стили для прайс-лист таблицы

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -31,3 +31,4 @@
 @import "./components/write-us.scss";
 @import "./components/page-footer.scss";
 @import "./components/social.scss";
+@import "./components/price-list.scss";
