--- a/src/sass/components/custom-text-box.scss
+++ b/src/sass/components/custom-text-box.scss
@@ -3,6 +3,7 @@
 
 
   label {
+    width: 100%;
     margin-bottom: 10px;
     padding-right: 16px;
     padding-left: 16px;
@@ -15,6 +16,7 @@
   input,
   textarea {
     display: block;
+    width: 100%;
     margin: 0;
     padding: 0;
     padding-top: 10px;
