--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -32,3 +32,4 @@
 @import "./components/page-footer.scss";
 @import "./components/social.scss";
 @import "./components/price-list.scss";
+@import "./components/write-us-form.scss";
