Рефакторинг. Подогнал отсупы под соответствие макету

--- a/src/sass/components/page-nav.scss
+++ b/src/sass/components/page-nav.scss
@@ -21,9 +21,11 @@
   flex-shrink: 0;
   width: 450px;
   margin: 0;
+  padding-top: 5px;
 }
 
 .page-nav__order-button {
   flex-shrink: 0;
+  min-width: 170px;
   margin-left: auto;
 }
