--- a/src/sass/global/fonts.scss
+++ b/src/sass/global/fonts.scss
@@ -1,38 +1,1 @@
-@font-face {
-  font-style: italic;
-  font-weight: 700;
-  font-family: "Georgia";
-
-  font-display: swap;
-  src: url("../fonts/georgia_bold_italic-webfont.woff2") format("woff2"), url("georgia_bold_italic-webfont.woff") format("woff");
-}
-
-
-@font-face {
-  font-style: normal;
-  font-weight: 700;
-  font-family: "Georgia";
-
-  font-display: swap;
-  src: url("../fonts/georgia_bold-webfont.woff2") format("woff2"), url("georgia_bold-webfont.woff") format("woff");
-}
-
-
-@font-face {
-  font-style: italic;
-  font-weight: 400;
-  font-family: "Georgia";
-
-  font-display: swap;
-  src: url("../fonts/georgia_italic-webfont.woff2") format("woff2"), url("georgia_italic-webfont.woff") format("woff");
-}
-
-
-@font-face {
-  font-style: normal;
-  font-weight: 400;
-  font-family: "Georgia";
-
-  font-display: swap;
-  src: url("../fonts/georgia-webfont.woff2") format("woff2"), url("georgia-webfont.woff") format("woff");
-}
+// Подключать шрифты тут
