--- a/src/sass/components/features.scss
+++ b/src/sass/components/features.scss
@@ -4,7 +4,7 @@
 
 .features__wrapper {
   padding-top: 50px;
-  padding-bottom: 55px;
+  padding-bottom: 57px;
 
   @include container;
 }
@@ -23,7 +23,7 @@
   position: relative;
 
   width: 340px;
-  padding-top: 90px;
+  padding-top: 88px;
   padding-right: 30px;
   padding-left: 30px;
 
@@ -40,6 +40,8 @@
     position: absolute;
     top: 0;
     left: 50%;
+
+    display: block;
 
     background-repeat: no-repeat;
     background-position: center center;
@@ -76,10 +78,14 @@
 
 .features__title {
   margin: 0;
-  margin-bottom: 29px;
+  margin-bottom: 20px;
 
   font-size: 30px;
   line-height: 30px;
   font-family: $secondery-font;
   color: #a38b70;
+}
+
+.features__desc {
+  margin: 0;
 }
