--- a/src/sass/components/product.scss
+++ b/src/sass/components/product.scss
@@ -24,7 +24,7 @@
   display: flex;
   justify-content: space-between;
   align-items: baseline;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 
   column-gap: 10px;
 }
@@ -39,7 +39,8 @@
 }
 
 .product__price {
-  flex: 1 0 auto;
+  flex: 0 0 auto;
+  margin: 0;
 
   font-weight: 700;
 }
@@ -58,6 +59,7 @@
 
 .product__button {
   flex: 1 1 auto;
+  min-width: 125px;
   padding-right: 10px;
   padding-left: 10px;
 }
