--- a/src/sass/components/write-us.scss
+++ b/src/sass/components/write-us.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding-top: 70px;
+  padding-top: 60px;
   padding-bottom: 70px;
 
   @include container;
@@ -17,10 +17,14 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin-bottom: 70px;
+  margin-bottom: 60px;
 }
 
 .write-us__title {
+  margin: 0;
+}
+
+.write-us__text {
   margin: 0;
 }
 
