Добовляет стилизация для copyright

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -33,3 +33,4 @@
 @import "./components/social.scss";
 @import "./components/price-list.scss";
 @import "./components/write-us-form.scss";
+@import "./components/copyright.scss";
