Исправляет стили элементов page-footer
Добавляет min-width кнопке "заказать".
Убирает margin у copyright

--- a/src/sass/components/page-footer.scss
+++ b/src/sass/components/page-footer.scss
@@ -39,7 +39,15 @@
   }
 }
 
+.page-footer__order-button {
+  min-width: 170px;
+}
+
 .page-footer__nav {
   justify-content: flex-start;
   align-items: flex-start;
+}
+
+.page-footer__copyright {
+  margin: 0;
 }
