--- a/src/sass/components/page-footer.scss
+++ b/src/sass/components/page-footer.scss
@@ -5,7 +5,7 @@
 }
 
 .page-footer__wrapper {
-  padding-top: 44px;
+  padding-top: 45px;
   padding-bottom: 50px;
 
   @include container;
@@ -16,10 +16,14 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 50px;
+  margin-bottom: 45px;
   padding-bottom: 45px;
 
   border-bottom: 2px solid #5e5e5e;
+
+  &--top {
+    align-items: flex-start;
+  }
 
   &:last-child {
     margin-bottom: 0;
@@ -46,6 +50,8 @@
 .page-footer__nav {
   justify-content: flex-start;
   align-items: flex-start;
+  margin-bottom: 50px;
+  padding-bottom: 65px;
 }
 
 .page-footer__copyright {
