--- a/src/sass/components/custom-text-box.scss
+++ b/src/sass/components/custom-text-box.scss
@@ -5,7 +5,7 @@
   label {
     display: block;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 4px;
     padding-right: 16px;
     padding-left: 16px;
 
@@ -45,5 +45,6 @@
 
   textarea {
     height: 120px;
+    padding-top: 18px;
   }
 }
