--- a/src/sass/components/write-us-form.scss
+++ b/src/sass/components/write-us-form.scss
@@ -2,14 +2,6 @@
   padding: 0;
 }
 
-.write-us-form__user-info {
-  display: block;
-  margin: 0;
-  padding: 0;
-
-  border: none;
-}
-
 .write-us-form__message {
   display: block;
   margin: 0;
@@ -17,6 +9,17 @@
 
   border: none;
 }
+
+.write-us-form__user-info {
+  display: block;
+  margin: 0;
+  margin-bottom: 25px;
+  padding: 0;
+
+  border: none;
+  border-bottom: 1px solid #d5d5d5;
+}
+
 
 .write-us-form__group {
   display: flex;
@@ -29,7 +32,7 @@
 .write-us-form__name {
   width: 100%;
   margin: 0;
-  margin-bottom: 18px;
+  margin-bottom: 15px;
 }
 
 .write-us-form__phone {
@@ -46,18 +49,19 @@
 
 .write-us-form__sub-toggler {
   margin: 0;
+  margin-bottom: 28px;
   padding-right: 16px;
   padding-left: 16px;
 }
 
 .write-us-form__message-theme {
   margin: 0;
-  margin-bottom: 18px;
+  margin-bottom: 15px;
 }
 
 .write-us-form__message-text {
   margin: 0;
-  margin-bottom: 55px;
+  margin-bottom: 54px;
 }
 
 .write-us-form__submit {
