--- a/src/sass/components/features.scss
+++ b/src/sass/components/features.scss
@@ -1,5 +1,5 @@
 .features {
-  background-color: #ffffff;
+  background-color: $white-color;
 }
 
 .features__wrapper {
@@ -83,7 +83,7 @@
   font-size: 30px;
   line-height: 30px;
   font-family: $secondery-font;
-  color: #a38b70;
+  color: $brown-color;
 }
 
 .features__desc {
