--- a/src/sass/global/global.scss
+++ b/src/sass/global/global.scss
@@ -15,7 +15,7 @@ body {
   font-family: $primary-font;
   color: $primary-text-color;
 
-  background-color: #ffffff;
+  background-color: $white-color;
 }
 
 img {
