--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -6,6 +6,25 @@ $desktop-width: 1200px;
 // <<--- Colors --->>
 
 $primary-text-color: #404040;
+$white-color: #ffffff;
+$black-color: #000000;
+$brown-color: #a38b70;
+$brown-light-color: #8d745a;
+$fomr-border-color: #d5d5d5;
+$light-gray-bg-color: #f2f2f2;
+$gray-text-color: #666666;
+$light-gray-text-color: #c3c3c3;
+$gray-border-color: #d8d8d8;
+$dark-gray-bg: #363636;
+/*
+Неопределенные цвета
+
+#b3b3b3
+#bebebe
+#d9d9d9
+#5e5e5e
+*/
+
 
 // <<--- Fonts --->>
 
