--- a/src/sass/components/custom-text-box.scss
+++ b/src/sass/components/custom-text-box.scss
@@ -27,10 +27,10 @@
 
     font-size: 18px;
     line-height: 30px;
-    color: #404040;
+    color: $primary-text-color;
 
-    background-color: #ffffff;
-    border: 2px solid #d5d5d5;
+    background-color: $white-color;
+    border: 2px solid $fomr-border-color;
     outline: none;
 
     &:hover {
@@ -39,7 +39,7 @@
 
     &:focus,
     &:active {
-      border-color: #8d745a;
+      border-color: $brown-light-color;
     }
   }
 
