--- a/src/sass/components/footer-nav.scss
+++ b/src/sass/components/footer-nav.scss
@@ -15,7 +15,7 @@
   font-size: 24px;
   line-height: normal;
   font-family: $secondery-font;
-  color: #a38b70;
+  color: $brown-color;
 }
 
 .footer-nav__list {
@@ -28,7 +28,7 @@
 .footer-nav__item {
   margin-bottom: 16px;
 
-  color: #c3c3c3;
+  color: $light-gray-text-color;
 
   &:last-child {
     margin-bottom: 0;
@@ -37,15 +37,15 @@
 
 .footer-nav__link {
   font-weight: 400;
-  color: #c3c3c3;
+  color: $light-gray-text-color;
 
   &:hover,
   &:focus {
-    color: #ffffff;
+    color: $white-color;
   }
 
   &:active {
-    color: #ffffff;
+    color: $white-color;
 
     opacity: 0.3;
   }
