--- a/src/sass/components/page-footer.scss
+++ b/src/sass/components/page-footer.scss
@@ -1,7 +1,7 @@
 .page-footer {
-  color: #c3c3c3;
+  color: $light-gray-text-color;
 
-  background-color: #363636;
+  background-color: $dark-gray-bg;
 }
 
 .page-footer__wrapper {
