--- a/src/sass/components/review-item.scss
+++ b/src/sass/components/review-item.scss
@@ -5,7 +5,7 @@
   padding-right: 90px;
   padding-left: 50px;
 
-  border-left: 3px solid #a38b70;
+  border-left: 3px solid $brown-color;
 }
 
 .review-item__text {
@@ -20,5 +20,5 @@
   padding: 0;
 
   font-weight: 700;
-  color: #000000;
+  color: $black-color;
 }
