--- a/src/sass/components/social.scss
+++ b/src/sass/components/social.scss
@@ -12,7 +12,7 @@
   font-size: 24px;
   line-height: normal;
   font-family: $secondery-font;
-  color: #a38b70;
+  color: $brown-color;
 }
 
 .social__list {
@@ -38,7 +38,7 @@
   width: 62px;
   height: 62px;
 
-  border: 1px solid rgba(#ffffff, 0.1);
+  border: 1px solid rgba($white-color, 0.1);
 
   &::before {
     content: "";
@@ -75,11 +75,11 @@
 
   &:hover,
   &:focus {
-    border-color: rgba(#ffffff, 0.3);
+    border-color: rgba($white-color, 0.3);
   }
 
   &:active {
-    border-color: rgba(#ffffff, 0.1);
+    border-color: rgba($white-color, 0.1);
 
     &::before {
       opacity: 0.3;
