--- a/src/sass/components/theory.scss
+++ b/src/sass/components/theory.scss
@@ -1,5 +1,5 @@
 .theory {
-  background-color: #f2f2f2;
+  background-color: $light-gray-bg-color;
 }
 
 .theory__wrapper {
@@ -59,7 +59,7 @@
 
   font-weight: 700;
   font-size: 24px;
-  color: #000000;
+  color: $black-color;
 }
 
 .theory__source {
@@ -68,7 +68,7 @@
   margin-left: 5px;
 
   font-style: italic;
-  color: #666666;
+  color: $gray-text-color;
 }
 
 .theory__item-content {
