--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,7 @@
 // Входная точка для сборки SCSS файлов
 // <<<---Global--->>>
 @import "../../node_modules/normalize.css/normalize";
+@import "./outline";
 @import "global/variables.scss";
 @import "global/fonts.scss";
 @import "global/mixins.scss";
