--- a/src/sass/components/page-footer.scss
+++ b/src/sass/components/page-footer.scss
@@ -48,10 +48,15 @@
 }
 
 .page-footer__nav {
+  flex-wrap: wrap;
   justify-content: flex-start;
   align-items: flex-start;
   margin-bottom: 50px;
   padding-bottom: 65px;
+
+  column-gap: 20px;
+
+  row-gap: 20px;
 }
 
 .page-footer__copyright {
