--- a/src/sass/components/theory.scss
+++ b/src/sass/components/theory.scss
@@ -18,12 +18,12 @@
 
 .theory__title {
   flex-grow: 1;
+  width: 680px;
   margin: 0;
   margin-right: 170px;
 }
 
 .theory__guide-button {
-  flex-shrink: 0;
   min-width: 170px;
   margin: 0;
 }
