--- a/src/sass/components/price-list.scss
+++ b/src/sass/components/price-list.scss
@@ -3,6 +3,15 @@
   font-size: 18px;
   line-height: 30px;
 
+  tr {
+    display: flex;
+    justify-content: space-between;
+
+    & > *:nth-child(2) {
+      flex-grow: 1;
+    }
+  }
+
   td {
     padding: 10px 15px;
 
